REGRESSION(r120979): getElementsByTagName is 12% slower https://bugs.webkit.org/show_bug.cgi?id=89783

Reviewed by Darin Adler.

The problem is that hashing std::pair<unsigned short, AtomicString> is very slow compared to just hashing AtomicString,
which internally holds a hash already. Fixed the regression by replacing the default hash function by the one that
computes AtomicString's hash + list type. This is okay because we only have 7 node list types at the moment.

* dom/NodeRareData.h:
(NodeListsNodeData):
(WebCore::NodeListsNodeData::NodeListCacheMapEntryHash::hash):
(NodeListCacheMapEntryHash):
(WebCore::NodeListsNodeData::NodeListCacheMapEntryHash::equal):
(WebCore::NodeListsNodeData::namedNodeListKey):


Canonical link: https://commits.webkit.org/107681@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@121103 268f45cc-cd09-0410-ab3c-d52691b4dbfc